Resynced with GNU Classpath: crypto, awt, swing, cleanups